# libHttpClient

Include/httpClient/: config.h
Source/Common/Win/: utils_win.cpp
Source/HTTP/: httpcall.cpp
Source/HTTP/WinHttp/: winhttp_connection.cpp  winhttp_connection.h  winhttp_provider.cpp
Source/WebSocket/: hcwebsocket.cpp  hcwebsocket.h
Utilities/CMake/Linux/libHttpClient/: CMakeLists.txt
